--- a/app/.env
+++ b/app/.env
@@ -1,4 +1,3 @@
-VITE_DOMAIN="beatbump.ml"
-VITE_SITE_URL="https://beatbump.ml"
-VITE_DONATION_URL="https://www.paypal.com/donate/?hosted_button_id=E6YRHKS2H2KP2"
-PORT=3000
+VITE_DOMAIN="music.parkalex.dev"
+VITE_SITE_URL="https://music.parkalex.dev"
+PORT=443
